--- a/index.html
+++ b/index.html
@@ -39,21 +39,92 @@
         </ul>
       </div>
     </nav>
-    <div class="row">
+    <div class="row landBody">
       <div class="col-sm-6">
-      <div class="cont">
-        <h1>Welcome to code class</h1>
-        <p>
-          orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-           pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. 
-         
-        </p>
-        <button id="my_button">
-          more
-        </button>
-      </div>
+        <div class="cont">
+          <h1>Welcome to code class</h1>
+          <p>
+            orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+            sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+            ultricies nec,
+            pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
+            aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam
+            dictum felis eu pede mollis pretium.
+
+          </p>
+          <button id="my_button">
+            more
+          </button>
+        </div>
       </div>
     </div>
+
+
+    <section class="calculator">
+      <!-- //creating a row -->
+      <div class="row bg-primary">
+        <!-- lets divide the row into columns using bootstrap -->
+        <div class="col-sm-6 funcionality">
+          <!-- display screen  -->
+          <!-- symbols (addition etc) -->
+
+        </div>
+
+        done number pad
+        <div class="col-sm-6 numberPad">
+          <!-- number pad   -->
+          <div class="row">
+
+            <div class="col-sm-4">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">1</button>
+            </div>
+
+            <div class="col-sm-4">
+              <button type="button" class="btn btn-dark col-sm-12  margin numbtn">2</button>
+            </div>
+            <div class="col-sm-4">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">3</button>
+            </div>
+
+          </div>
+          <!-- second row -->
+
+          <div class="row">
+
+            <div class="col-sm-4">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">4</button>
+            </div>
+
+            <div class="col-sm-4">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">5</button>
+            </div>
+            <div class="col-sm-4">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">6</button>
+            </div>
+
+          </div>
+          <div class="row">
+
+            <div class="col-sm-3">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">7</button>
+            </div>
+
+            <div class="col-sm-3">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">8</button>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">9</button>
+            </div>
+            <div class="col-sm-3">
+              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">0</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </section>
+
 
   </div>
 </body>
