--- a/index.html
+++ b/index.html
@@ -65,12 +65,46 @@
       <div class="row bg-primary">
         <!-- lets divide the row into columns using bootstrap -->
         <div class="col-sm-6 funcionality">
-          <!-- display screen  -->
-          <!-- symbols (addition etc) -->
+          <div id="display">
+
+          </div>
+
+          <div class="symbols">
+            <div class="row">
+
+              <div class="col-sm-4">
+                <button type="button" class="btn btn-dark col-sm-12 margin sybtn">+</button>
+              </div>
+  
+              <div class="col-sm-4">
+                <button type="button" class="btn btn-dark col-sm-12  margin sybtn">-</button>
+              </div>
+              <div class="col-sm-4">
+                <button type="button" class="btn btn-dark col-sm-12 margin sybtn">/</button>
+              </div>
+  
+            </div>
+            <div class="row">
+
+              <div class="col-sm-4">
+                <button type="button" class="btn btn-dark col-sm-12 margin sybtn">*</button>
+              </div>
+  
+              <div class="col-sm-4">
+                <button type="button" class="btn btn-dark col-sm-12  margin sybtn">%</button>
+              </div>
+              <div class="col-sm-4">
+                <button type="button" class="btn btn-dark col-sm-12 margin sybtn">=</button>
+              </div>
+  
+            </div>
+          
+
+          </div>
 
         </div>
 
-        done number pad
+        <!-- done number pad -->
         <div class="col-sm-6 numberPad">
           <!-- number pad   -->
           <div class="row">
