--- a/index.html
+++ b/index.html
@@ -75,30 +75,30 @@
               <div class="col-sm-4">
                 <button type="button" class="btn btn-dark col-sm-12 margin sybtn">+</button>
               </div>
-  
+
               <div class="col-sm-4">
                 <button type="button" class="btn btn-dark col-sm-12  margin sybtn">-</button>
               </div>
               <div class="col-sm-4">
                 <button type="button" class="btn btn-dark col-sm-12 margin sybtn">/</button>
               </div>
-  
+
             </div>
             <div class="row">
 
               <div class="col-sm-4">
                 <button type="button" class="btn btn-dark col-sm-12 margin sybtn">*</button>
               </div>
-  
+
               <div class="col-sm-4">
                 <button type="button" class="btn btn-dark col-sm-12  margin sybtn">%</button>
               </div>
               <div class="col-sm-4">
                 <button type="button" class="btn btn-dark col-sm-12 margin sybtn">=</button>
               </div>
-  
+
             </div>
-          
+
 
           </div>
 
@@ -110,7 +110,7 @@
           <div class="row">
 
             <div class="col-sm-4">
-              <button type="button" class="btn btn-dark col-sm-12 margin numbtn">1</button>
+              <button type="button" onclick="console.log(1)" class="btn btn-dark col-sm-12 margin numbtn">1</button>
             </div>
 
             <div class="col-sm-4">
